[MOSIP-8035] Multiple changes: - Kubernetes dashboard access moved to nodeport, as its HTTPS backend was interfering with allowing all hosts on other ingress files. - Specific host entries removed from all ingress files. - Nginx configured to not pass original host name in the header, otherwise, ingress has issues.

--- a/deployment/sandbox-v2/helm/charts/grafana/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/grafana/values.template.j2
@@ -10,6 +10,6 @@ grafana.ini:
  
 ingress:
   enabled: true
-  hosts: 
-    - {{sandbox_domain_name}} 
+  # Explicitly disabling any hosts and default values.yml seems to have default host specified.
+  hosts: []
   path: "/{{mon_prop.grafana_ingress_path}}"
