--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -34,9 +34,8 @@ landing:   # Landing folder where packets land
 imagePullPolicy: Always 
 services:
   receiver:
-    serviceName: regproc-packet-receiver-stage
-    dockerImage: mosipdev/registration-processor-packet-receiver-stage
-    dockerTag: 1.0.10
+    serviceName: {{ versions.services.dmzregproc.receiver.keys()[0] }} 
+    dockerImage: {{ versions.services.dmzregproc.receiver.values()[0] }}
     ports:
       eventbusPort: 5711
       hazelcastPort: 5701
@@ -45,9 +44,8 @@ services:
     ingressPath: /registrationprocessor/v1/packetreceiver/
     healthUrl: /registrationprocessor/v1/packetreceiver/actuator/health
   camel:
-    serviceName: regproc-camel-stage
-    dockerImage: mosipdev/registration-processor-common-camel-bridge
-    dockerTag: 1.0.10
+    serviceName: {{ versions.services.dmzregproc.camel.keys()[0] }} 
+    dockerImage: {{ versions.services.dmzregproc.camel.values()[0] }}
     ports:
       eventbusPort: 5723
       hazelcastPort: 5701
@@ -56,18 +54,16 @@ services:
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/camelbridge/actuator/health
   status:
-    serviceName: regproc-registration-status-service
-    dockerImage: mosipdev/registration-processor-registration-status-service
-    dockerTag: 1.0.10
+    serviceName: {{ versions.services.dmzregproc.status.keys()[0] }} 
+    dockerImage: {{ versions.services.dmzregproc.status.values()[0] }}
     ports:
       containerPort: 8083
       servicePort: 80
     ingressPath: /registrationprocessor/v1/registrationstatus/
     healthUrl: /registrationprocessor/v1/registrationstatus/actuator/health
   pktserver:
-    serviceName: regproc-dmz-packet-server
-    dockerImage: mosipdev/registration-processor-dmz-packet-server
-    dockerTag: 1.0.9
+    serviceName: {{ versions.services.dmzregproc.pktserver.keys()[0] }} 
+    dockerImage: {{ versions.services.dmzregproc.pktserver.values()[0] }}
     pv:
       name: pktserver-pv
       size: 5Gi  # Same as landing above
@@ -83,4 +79,3 @@ services:
     ingressPath: ''  # NOTE: Seperate ingress for pktserver due to different rewrite rule.
     healthUrl: ''
       
-
