[MOSIP-837] Versioning added for irepo, pms, and resident.

--- a/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
@@ -16,17 +16,16 @@ internalDomain: {{ clusters.mz.nodeport_node }}
 isGlowroot: {{ is_glowroot }} 
 services:
   identity:
+    serviceName: {{ versions.services.idrepo.identity.keys()[0] }} 
+    dockerImage: {{ versions.services.idrepo.identity.values()[0] }}
     serviceName: idrepo-identity-service
-    dockerImage: mosipdev/id-repository-identity-service
-    dockerTag: 1.0.9
     containerPort: 8090
     servicePort: 80
     ingressPath: /idrepository/v1/identity 
     healthUrl: /idrepository/v1/identity/actuator/health
   vid: 
-    serviceName: idrepo-vid-service
-    dockerImage: mosipdev/id-repository-vid-service
-    dockerTag: 1.0.9
+    serviceName: {{ versions.services.idrepo.vid.keys()[0] }} 
+    dockerImage: {{ versions.services.idrepo.vid.values()[0] }}
     containerPort: 8091
     servicePort: 80
     ingressPath: /idrepository/v1/vid
@@ -34,30 +33,26 @@ services:
 
 generators:
   uinhash:  
-    name:  idrepo-uin-hash-generator 
-    dockerImage: mosipdev/kernel-salt-generator
-    dockerTag: 1.0.9
+    name: {{ versions.services.idrepo.uinhash.keys()[0] }} 
+    dockerImage: {{ versions.services.idrepo.uinhash.values()[0] }}
     table: mosip.idrepo.identity.db.shard.uinHashTable
     db_alias: mosip.idrepo.identity.db.shard
     schema: mosip.idrepo.identity.db.shard.schema  
   uinencrypt:
-    name:  idrepo-uin-encrypt-generator 
-    dockerImage: mosipdev/kernel-salt-generator
-    dockerTag: 1.0.9
+    name: {{ versions.services.idrepo.uinencrypt.keys()[0] }} 
+    dockerImage: {{ versions.services.idrepo.uinencrypt.values()[0] }}
     table: mosip.idrepo.identity.db.shard.uinEncryptTable 
     db_alias: mosip.idrepo.identity.db.shard 
     schema_name: mosip.idrepo.identity.db.shard.schema 
   vidhash:
-    name:  idrepo-vid-hash-generator 
-    dockerImage: mosipdev/kernel-salt-generator
-    dockerTag: 1.0.9
+    name: {{ versions.services.idrepo.vidhash.keys()[0] }} 
+    dockerImage: {{ versions.services.idrepo.vidhash.values()[0] }}
     table: mosip.idrepo.vid.db.uinHashTable
     db_alias: mosip.idrepo.vid.db 
     schema: mosip.idrepo.vid.db.schema
   videncrypt:
-    name:  idrepo-vid-encrypt-generator 
-    dockerImage: mosipdev/kernel-salt-generator
-    dockerTag: 1.0.9
+    name: {{ versions.services.idrepo.videncrypt.keys()[0] }} 
+    dockerImage: {{ versions.services.idrepo.videncrypt.values()[0] }}
     table: mosip.idrepo.vid.db.uinEncryptTable 
     db_alias: mosip.idrepo.vid.db 
     schema: mosip.idrepo.vid.db.schema 
