--- a/deployment/sandbox-v2/helm/charts/pms/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/pms/values.template.j2
@@ -16,33 +16,29 @@ internalDomain: {{ clusters.mz.nodeport_node }}
 isGlowroot: {{ is_glowroot }} 
 services:
   misp: 
-    serviceName: pms-misp-service
-    dockerImage: mosipdev/pmp-misp-service
-    dockerTag: 1.0.0
+    serviceName: {{ versions.services.pms.misp.keys()[0] }} 
+    dockerImage: {{ versions.services.pms.misp.values()[0] }}
     containerPort: 9100
     servicePort: 80
     ingressPath: /partnermanagement/v1/misps
     healthUrl: /partnermanagement/v1/misps/actuator/health
   pm:
-    serviceName: pms-partner-management-service
-    dockerImage: mosipdev/pmp-partner-management-service
-    dockerTag: 1.0.0
+    serviceName: {{ versions.services.pms.pm.keys()[0] }} 
+    dockerImage: {{ versions.services.pms.pm.values()[0] }}
     containerPort: 9102
     servicePort: 80
     ingressPath: /partnermanagement/v1/pmpartners
     healthUrl: /partnermanagement/v1/pmpartners/actuator/health
   partner:
-    serviceName: pms-partner-service
-    dockerImage: mosipdev/pmp-partner-service
-    dockerTag: 1.0.0
+    serviceName: {{ versions.services.pms.partner.keys()[0] }} 
+    dockerImage: {{ versions.services.pms.partner.values()[0] }}
     containerPort: 9103
     servicePort: 80
     ingressPath: /partnermanagement/v1/partners
     healthUrl: /partnermanagement/v1/partners/actuator/health
   policy:
-    serviceName: pms-policy-management-service
-    dockerImage: mosipdev/pmp-policy-management-service
-    dockerTag: 1.0.0
+    serviceName: {{ versions.services.pms.policy.keys()[0] }} 
+    dockerImage: {{ versions.services.pms.policy.values()[0] }}
     containerPort: 9101
     servicePort: 80
     ingressPath: /partnermanagement/v1/policies
