--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -16,8 +16,8 @@ probe:
   period: 30 # Seconds
 services:
   resident: 
-    serviceName: resident-service
-    dockerImage: mosipdev/resident-service
+    serviceName: {{ versions.services.resident.resident.keys()[0] }} 
+    dockerImage: {{ versions.services.resident.resident.values()[0] }}
     dockerTag: 1.0.10
     containerPort: 8099
     servicePort: 80
