--- a/deployment/sandbox-v2/helm/charts/ida/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/ida/values.template.j2
@@ -18,6 +18,8 @@ services:
   auth:
     serviceName: {{ versions.services.ida.auth.keys()[0] }} 
     dockerImage: {{ versions.services.ida.auth.values()[0] }}
+    containerPort: 8090
+    servicePort: 80
     hsmUrl: tcp://softhsm-ida:80   # Should match with softhsm chart service name and port (see, ida.yml and role/softhsm)
     ingressPath: /idauthentication/v1/auth
     healthUrl: /idauthentication/v1/auth/actuator/health
