[MOSIP-1806] Option to run postgres exclusively on a single node added.

--- a/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
@@ -24,3 +24,9 @@ docker:
   containerPort: 5432
 nodePort: {{ postgres.nodeport }}
 maxConnections: {{ postgres.max_connections }} 
+nodeAffinity:
+  enabled: {{ postgres.node_affinity.enabled }}
+  node: {{ postgres.node_affinity.node }}
+  taint:
+    key: {{ postgres.node_affinity.taint.key }}
+    value: {{ postgres.node_affinity.taint.value }}
