--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_index.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_index.yml.j2
@@ -6,6 +6,12 @@
 
 <body>
   <h1> This is MOSIP Sandbox!</h1>
+
+  <h2>Version</h2>
+    <p>
+      <a href="https://{{sandbox_domain_name}}/versions.txt" type="text/plain">Docker versions</a>
+    </p>
+
   <h2>Dasbhoards</h2>
     <p>
       <a href="https://{{sandbox_domain_name}}/mz-dashboard">K8s Dashboard - MZ</a>
