--- a/deployment/sandbox-v2/helm/charts/admin/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/admin/values.template.j2
@@ -17,17 +17,15 @@ internalDomain: {{ clusters.mz.nodeport_node }}
 isGlowroot: {{ is_glowroot }} 
 services:
   admin: 
-    serviceName: admin-service
-    dockerImage: mosipdev/admin-service
-    dockerTag: 1.0.9
+    serviceName: {{ versions.services.admin.service.keys()[0] }}
+    dockerImage: {{ versions.services.admin.service.values()[0] }}
     containerPort: 8098
     servicePort: 80
     ingressPath: /v1/admin
     healthUrl: /v1/admin/actuator/health
   ui:
-    serviceName: admin-ui
-    dockerImage: mosipdev/admin-ui
-    dockerTag: 1.0.10
+    serviceName: {{ versions.services.admin.ui.keys()[0] }}
+    dockerImage: {{ versions.services.admin.ui.values()[0] }}
     containerPort: 80
     servicePort: 80
     configName: admin-ui-config # ConfigMap name
