[MOSIP-8222] ELK code reorganized. Filebeat run on DMZ.

--- a/deployment/sandbox-v2/helm/charts/filebeat/values.templates.j2
+++ b/deployment/sandbox-v2/helm/charts/filebeat/values.templates.j2
@@ -16,7 +16,7 @@ filebeatConfig:
 
     output.elasticsearch:
       host: '${NODE_NAME}'
-      hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
+      hosts: '${ELASTICSEARCH_HOSTS:{{mon_prop.elasticsearch.host}} }'
 
 # Extra environment variables to append to the DaemonSet pod spec.
 # This will be appended to the current 'env:' key. You can use any of the kubernetes env
