[MOSIP-8222] metrics-server added to view pod level CPU and Memory usage.

--- a/deployment/sandbox-v2/helm/charts/prometheus/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/prometheus/values.template.j2
@@ -134,7 +134,7 @@ configmapReload:
     resources: {}
 
 kubeStateMetrics:
-  enabled: false # Puneet. It was true
+  enabled: true 
 
 nodeExporter:
   enabled: true
