[MOSIP-8222] Filtering of logs added in Filebeat yaml.

--- a/deployment/sandbox-v2/helm/charts/filebeat/values.templates.j2
+++ b/deployment/sandbox-v2/helm/charts/filebeat/values.templates.j2
@@ -19,8 +19,11 @@ filebeatConfig:
     processors:
       - drop_event:
           when:
-            contains: 
-              message: "DEBUG"
+            or:
+              - contains.message: "DEBUG"
+              - contains.message: "<--- Inside filter --->"
+              - contains.message: "/actuator/health"
+          
 
     output.elasticsearch:
       host: '${NODE_NAME}'
