[MOSIP-8222] Log sidecars added in dmz regproc. Kibana run on nodeport for filebeat to access from dmz.

--- a/deployment/sandbox-v2/helm/charts/filebeat/values.templates.j2
+++ b/deployment/sandbox-v2/helm/charts/filebeat/values.templates.j2
@@ -27,7 +27,7 @@ filebeatConfig:
       hosts: '${ELASTICSEARCH_HOSTS:{{mon_prop.elasticsearch.host}} }'
 
     setup.kibana:
-      host: "kibana-kibana:5601"
+      host: "{{mon_prop.kibana.url}}" 
 
     setup.dashboards.enabled: true
 
