added modification for rwg-client-downloader module

--- a/deployment/sandbox-v2/helm/charts/reg-client-downloader/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/reg-client-downloader/values.template.j2
@@ -1,14 +1,12 @@
-namespace: default
-serviceName: reg-client
+serviceName: reg-client-downloader
 
-activeProfileEnv: mz 
+activeProfileEnv: dmz 
 springConfigLabel: master
 configServerUrl: http://config-server/config
 artifactoryUrl: {{ artifactory_url }} 
 imagePullPolicy: Always
 docker:
-  image: {{ versions.services.registration.client.keys()[0] }}
-  tag: {{ versions.services.registration.client.values()[0] }}
+  image: {{ versions.services.registration.client.values()[0] }}
   ports:
     containerPort: 80
     servicePort: 80
@@ -19,15 +17,16 @@ crypto_key_env: {{ reg_client.crypto_key }}
 bootpwd: {{ reg_client.bootpwd }}
 tpm: "N"
 certificate: "mosip_cer.cer"
-upgrade_server: "https://phil.mosip.net"
+upgrade_server: {{ site.sandbox_public_url }}
+healthcheck: "{{ site.sandbox_public_url }}/vi/authmanager/actuator/health"
 
 sc:
   name: ""
 pv:
-  name: registration-pv
+  name: reg-client-downloader
   size: 2Mi
 pvc:
-  name: registration-pvc
+  name: reg-client-downloader
   size: 2Mi 
 
 nfs:
