--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -250,7 +250,7 @@ http {
         }
 
         location /registration-client/ {
-           proxy_pass http://mzworker0.sb:30080/registration-client/;
+           proxy_pass http://dmzworker0.sb:30080/registration-client/;
         }
 
         error_page 404 /404.html;
