[MOSIP-8774] Config-server major enhancements. 1) Config repo referenced from github. 2) Option to clone a private repo added.

--- a/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
@@ -7,22 +7,26 @@ docker:
   servicePort: 80
 jarName: kernel-config-server # Without .jar. Used locally for Docker
 component: config-server
-gitrepo:
-  name: config_repo
-  mountPath: /var/lib/config_repo
-  uri: /var/lib/config_repo  # repoMountPath + gitRepoName
-pv:
-  name: config-server-pv
-  size: 10Mi
-pvc:
-  name: config-server-pvc
-  size: 10Mi # Should not exceed pv size
+
 ingressPath: /config
 domain: {{ sandbox_domain_name }}
 internalDomain: {{ clusters.mz.nodeport_node }} 
-sc:
-  name: ""
 
-nfs:
-  server: {{ nfs.server }}
-  path: {{ config_repo.path }} 
+gitRepoUri: {{ config_repo.git_repo_uri }}
+searchFolders: {{ config_repo.search_folders }}
+
+localRepo:
+  enabled: {{ config_repo.local_git_repo.enabled }}
+  mountPath: /var/lib/config_repo
+  pv:
+    name: config-server-pv
+    size: 10Mi
+  pvc:
+    name: config-server-pvc
+    size: 10Mi # Should not exceed pv size
+  sc:
+    name: ""
+  nfs:
+    server: {{ nfs.server }}
+    path: {{ config_repo.local_git_repo.path }} 
+
