[MOSIP-8736] Web console for Activemq enabled

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_index.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_index.yml.j2
@@ -34,6 +34,10 @@
     </p>
 
     <p>
+      <a href="https://{{sandbox_domain_name}}/activemq/admin/">ActiveMQ</a>
+    </p>
+    
+    <p>
       <a href="https://{{sandbox_domain_name}}/kibana/">Kibana</a>
     </p>
 
