[MOSIP-8774] Docker hub config server docker used instead of one created in mosip as we will need more features.  Code refactoring.

--- a/deployment/sandbox-v2/helm/charts/admin/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/admin/values.template.j2
@@ -3,7 +3,7 @@ component: admin
 part-of: mosip
 activeProfileEnv: mz 
 springConfigLabel: master
-configServerUrl: http://config-server/config
+configServerUrl: {{ config_server.internal_url }}
 sandboxDomainName: test-sandbox.southindia.cloudapp.azure.com
 ingress:
    namespace: default
