--- a/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
@@ -1,9 +1,12 @@
 namespace: default
-name: config-server  # Will be used as service name too
+name: {{ config_server.name }} # Will be used as service name too
 docker:
-  image: mosipid/sandbox-config-server
-  tag: 1.0.5
-  containerPort: 51000
+  #image: mosipid/sandbox-config-server
+  #tag: 1.0.5
+  #containerPort: 51000
+  image: hyness/spring-cloud-config-server
+  tag: latest
+  containerPort: 8888
   servicePort: 80
 jarName: kernel-config-server # Without .jar. Used locally for Docker
 component: config-server
@@ -14,6 +17,8 @@ internalDomain: {{ clusters.mz.nodeport_node }}
 
 gitRepoUri: {{ config_repo.git_repo_uri }}
 searchFolders: {{ config_repo.search_folders }}
+
+javOpts: '-Dspring.cloud.config.server.git.username=pjoshi751 -Dspring.cloud.server.git.password=mhowNipx29'
 
 localRepo:
   enabled: {{ config_repo.local_git_repo.enabled }}
