--- a/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
@@ -4,7 +4,7 @@ component: kernel
 part-of: mosip
 activeProfileEnv: mz
 springConfigLabel: master
-configServerUrl: http://config-server/config
+configServerUrl: {{ config_server.internal_url }}
 ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
