--- a/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
@@ -3,7 +3,7 @@ component: prereg
 part-of: mosip
 activeProfileEnv: mz
 springConfigLabel: master
-configServerUrl: http://config-server/config
+configServerUrl: {{ config_server.internal_url }}
 domainName: {{ sandbox_domain_name }}
 internalDomain: {{ clusters.mz.nodeport_node }} 
 probe:
