[MOSIP-8832][MOSIP-8774] Major changes. 1. Ansible vault used for secrets. 2. Config server docker image changed 3. Config server encryption enabled, private repo pull enabled via secrets.

--- a/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
@@ -1,9 +1,6 @@
 namespace: default
 name: {{ config_server.name }} # Will be used as service name too
 docker:
-  #image: mosipid/sandbox-config-server
-  #tag: 1.0.5
-  #containerPort: 51000
   image: hyness/spring-cloud-config-server
   tag: latest
   containerPort: 8888
@@ -15,10 +12,14 @@ ingressPath: /config
 domain: {{ sandbox_domain_name }}
 internalDomain: {{ clusters.mz.nodeport_node }} 
 
-gitRepoUri: {{ config_repo.git_repo_uri }}
-searchFolders: {{ config_repo.search_folders }}
+encryptKey: '' # Passed diretly via command line
 
-javOpts: '-Dspring.cloud.config.server.git.username=pjoshi751 -Dspring.cloud.server.git.password=mhowNipx29'
+gitRepo:
+  uri: {{ config_repo.git_repo_uri }}
+  searchFolders: {{ config_repo.search_folders }}
+  private: {{ config_repo.private }} 
+  username: {{ config_repo.username }}    
+  password: '' # Passed directly via command line
 
 localRepo:
   enabled: {{ config_repo.local_git_repo.enabled }}
