[MOSIP-8774][MOSIP-8832] Db password changes for vault.

--- a/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
@@ -11,6 +11,9 @@ component: config-server
 ingressPath: /config
 domain: {{ sandbox_domain_name }}
 internalDomain: {{ clusters.mz.nodeport_node }} 
+additionalParams:  # Required for mosip properties
+  keycloakExternalUrl: {{ keycloak.external_url }}
+  sandboxPublicUrl: {{ site.sandbox_public_url }}
 
 encryptKey: '' # Passed diretly via command line
 
