--- a/deployment/sandbox-v2/helm/charts/pms/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/pms/values.template.j2
@@ -2,7 +2,7 @@ namespace: default
 component: pms
 part-of: mosip
 activeProfileEnv: mz 
-springConfigLabel: master
+springConfigLabel: {{ config_repo.branch }} 
 configServerUrl: {{ config_server.internal_url }}
 ingress:
    namespace: default
