--- a/deployment/sandbox-v2/helm/charts/softhsm/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/softhsm/values.template.j2
@@ -2,7 +2,7 @@ namespace: default
 serviceName: softhsm-{{hsm_prop.label}}
 
 activeProfileEnv: mz 
-springConfigLabel: master
+springConfigLabel: {{ config_repo.branch }} 
 configServerUrl: http://config-server/config
 artifactoryUrl: {{ artifactory_url }} 
 
