--- a/deployment/sandbox-v2/helm/charts/admin/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/admin/values.template.j2
@@ -2,7 +2,7 @@ namespace: default
 component: admin
 part-of: mosip
 activeProfileEnv: mz 
-springConfigLabel: master
+springConfigLabel: {{ config_repo.branch }} 
 configServerUrl: {{ config_server.internal_url }}
 sandboxDomainName: test-sandbox.southindia.cloudapp.azure.com
 ingress:
