--- a/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
@@ -3,7 +3,7 @@ namespace: default
 component: kernel
 part-of: mosip
 activeProfileEnv: mz
-springConfigLabel: master
+springConfigLabel: {{ config_repo.branch }} 
 configServerUrl: {{ config_server.internal_url }}
 ingress:
    namespace: default
