--- a/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
@@ -2,7 +2,7 @@ namespace: default
 component: prereg
 part-of: mosip
 activeProfileEnv: mz
-springConfigLabel: master
+springConfigLabel: {{ config_repo.branch }} 
 configServerUrl: {{ config_server.internal_url }}
 domainName: {{ sandbox_domain_name }}
 internalDomain: {{ clusters.mz.nodeport_node }} 
