--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -3,7 +3,7 @@ component: dmzregproc
 part-of: mosip
 activeProfileEnv: dmz 
 springConfigLabel: {{ config_repo.branch }} 
-configServerUrl: http://{{ clusters.mz.any_node_ip}}:{{ clusters.mz.ingress.nodeports.http}}/config  # Config server is on MZ
+configServerUrl: {{ config_server.ingress_url }}
 storageClass:  manual
 
 probe:
