adding minor fix activemq console access

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -253,7 +253,7 @@ http {
            proxy_pass http://dmzworker0.sb:30080/registration-client/;
         }
         location /activemq/ {
-           proxy_pass http://dmzworker0.sb:30080/activemq/;
+           proxy_pass http://mzworker0.sb:30080/activemq/;
         }
 
         error_page 404 /404.html;
