--- a/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
@@ -1,7 +1,7 @@
 name: postgres
 defaultDb: keycloak # Default DB on Postgres
 user: {{ postgres.user }} 
-password: {{ postgres.default_password }}
+password: {{ secrets.postgres.su}}
 nfs:  # Must match nfs server params defined via Ansible
   server: {{ nfs.server }} 
   path: {{ postgres.nfs_path }}
