--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -256,6 +256,10 @@ http {
            proxy_pass http://dmzworker0.sb:30080/activemq/;
         }
 
+        location /commons/v1/packetmanager/ {
+           proxy_pass http://mzworker0.sb:30080/commons/v1/packetmanager/;
+        }
+
         error_page 404 /404.html;
             location = /40x.html {
         }
